Kommentert globalsettings. Lagt til django-image-cropping
Les dependencies/readme om image-cropping-staticfilene ikke fungerer.

--- a/dependencies/readme
+++ b/dependencies/readme
@@ -1,11 +1,6 @@
 # Ikke kjør denne filen, skriv kommandoene. 
 # Selv om det kanskje funker å bare kjøre den.
-
-
-# Installer python-saker og ting #
-sudo apt-get install python-pip
-# ELLER
-# for diverse ting som trengs
+# Denne filen inneholder diverse som kan være forskjellig på hver maskin
 
 # Markdown extensions #
 cd ../markdown_extensions
@@ -15,4 +10,9 @@ sudo cp *.py /usr/lib/pymodules/python2.7/markdown/extensions
 # avhengig av hvilken mappe som eksisterer
 
 # Twitter bootstrap #
-kjør make fra hovedmappen.
+kjør make fra hovedmappen, eller twitter-bootstrap-mappen.
+
+# Django-image-cropping trenger noen static-filer. Om du bruker staticfiles-
+# appen er dette unødvendig.
+cd ../static
+ln -s /usr/local/lib/python2.7/dist-packages/image_cropping/static/image_cropping image_cropping
